--- a/.gitmodules
+++ b/.gitmodules
@@ -141,7 +141,7 @@
 	branch = master
 [submodule "repos/swift"]
 	path = repos/swift
-	url = https://github.com/tree-sitter/tree-sitter-swift
+	url = https://gitlab.com/woolsweater/tree-sitter-swifter.git
 	update = none
 	ignore = dirty
 	branch = master
@@ -186,7 +186,7 @@
 	url = https://github.com/LumaKernel/tree-sitter-prisma
 	branch = master
 	update = none
-	ignore = dirty  
+	ignore = dirty
 [submodule "repos/haskell"]
 	path = repos/haskell
 	url = https://github.com/tree-sitter/tree-sitter-haskell
